# demorepo

./: README.md  pyproject.toml
demorepo/: __main__.py
