[tool.poetry]
name = "demorepo"
version = "0.1.0"
description = ""
authors = ["Panu Oksiala <panu@oksiala.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
